--- a/src/Nav.css
+++ b/src/Nav.css
@@ -7,10 +7,12 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
 }
 
 .nav__black {
-    background-color: #111; 
+    background-color: #111;
 }
 
 .nav__logo {
